Remove dead code.

From David Binderman in PR kern/53029